Portfolio path normalization - convert all project pages to root-absolute paths

--- a/projects/decontos-library.html
+++ b/projects/decontos-library.html
@@ -9,15 +9,15 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="../css/colors.css">
-    <link rel="stylesheet" href="../css/typography.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/cards.css">
-    <link rel="stylesheet" href="../css/carousel.css">
-    <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/table.css">
-    <link rel="stylesheet" href="../css/tags.css">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="/css/colors.css">
+    <link rel="stylesheet" href="/css/typography.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/cards.css">
+    <link rel="stylesheet" href="/css/carousel.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/table.css">
+    <link rel="stylesheet" href="/css/tags.css">
+    <link rel="stylesheet" href="/css/styles.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,7 +30,7 @@
 
   <main class="project-page">
     <section id="decontosLibrary" class="container-fluid px-md-5">
-      <img src="../assets/descontos-library/descontosLibrary-heroImage.png" style="max-height: 500px; object-fit: cover;" alt="Cover" class="col-12 col-sm-12 col-lg-12">
+      <img src="/assets/descontos-library/descontosLibrary-heroImage.png" style="max-height: 500px; object-fit: cover;" alt="Cover" class="col-12 col-sm-12 col-lg-12">
 
         <h1>Descontos Library</h1>
 
@@ -61,7 +61,7 @@
         <p>Every client has their own launcher icon and splash screen and specific branding like colors and fonts. In the beginning this was all over the place. I took all these scattered elements and systematized them into this final library. I used Figma Variables to organize everything from the basic colors to the specific typography and text styles for each partner. This way we could manage the look and feel for each client in a very organized way without breaking the system. It was all about creating a solid foundation that could handle any brand identity thrown at it.</p>
 
         <div class="row g-0 my-5">
-          <img src="../assets/descontos-library/discover-image.png" alt="A visual guide showing the systematization of different launcher icons and splash screens alongside the Figma Variables panel to demonstrate how the branding scales." class="col-12 col-sm-12 col-lg-12 my-3">
+          <img src="/assets/descontos-library/discover-image.png" alt="A visual guide showing the systematization of different launcher icons and splash screens alongside the Figma Variables panel to demonstrate how the branding scales." class="col-12 col-sm-12 col-lg-12 my-3">
         </div>
 
         <h3>Screenflow: Mapping the experience from scratch</h3>
@@ -75,11 +75,11 @@
 
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../assets/descontos-library/screenflowDesktop.png" class="d-block w-100" alt="Screenflow for Desktop">
+                    <img src="/assets/descontos-library/screenflowDesktop.png" class="d-block w-100" alt="Screenflow for Desktop">
                 </div>
                 
                 <div class="carousel-item">
-                    <img src="../assets/descontos-library/screenflowMobile.png" class="d-block w-100" alt="Screenflow for Mobile">
+                    <img src="/assets/descontos-library/screenflowMobile.png" class="d-block w-100" alt="Screenflow for Mobile">
                 </div>
             </div>
 
@@ -97,7 +97,7 @@
         <p>During the definition phase, the focus was on proactively componentizing a robust library for the 'Descontos' product, using the 'Ads' stream as a lever to apply Atomic Design principles and document UI improvements across the ecosystem. As part of an internal <strong>DesignOps initiative</strong>, we established a unified visual structure for Figma file covers, where even the specific shade of green was strategically chosen to distinguish 'Descontos' assets from other Bemobi projects. Every element of these covers—including titles, imagery, status tags, and team members—underwent multiple studies and iterations to streamline the design process and mature the overall Design construction within the Bemobi team.</p>
 
         <div class="row g-0 my-5">
-          <img src="../assets/descontos-library/defineDesignOps.png" alt="A view of the library organization in Figma showing the file structure and how the different assets are categorized for the team." class="col-12 col-sm-12 col-lg-12 my-3">
+          <img src="/assets/descontos-library/defineDesignOps.png" alt="A view of the library organization in Figma showing the file structure and how the different assets are categorized for the team." class="col-12 col-sm-12 col-lg-12 my-3">
         </div>
 
         <h3>Develop: High-end Figma Engineering</h3>
@@ -105,7 +105,7 @@
 
         <div class="row g-0 my-5">
           <video autoplay loop muted playsinline>
-            <source src="../assets/descontos-library/developComponentFigma.mp4" type="video/mp4" alt="A screen recording or a sequence of images showing a Product Card component being customized using Figma properties and resizing perfectly with Auto-layout.">
+            <source src="/assets/descontos-library/developComponentFigma.mp4" type="video/mp4" alt="A screen recording or a sequence of images showing a Product Card component being customized using Figma properties and resizing perfectly with Auto-layout.">
           </video>
         </div>
 
@@ -125,22 +125,22 @@
 
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="../assets/descontos-library/methodology-1-overall.png" class="d-block w-100" alt="Atomic Design Overview">
+                <img src="/assets/descontos-library/methodology-1-overall.png" class="d-block w-100" alt="Atomic Design Overview">
               </div>
               <div class="carousel-item">
-                <img src="../assets/descontos-library/methodology-2-atoms.png" class="d-block w-100" alt="Atomic Design Components - Atoms">
+                <img src="/assets/descontos-library/methodology-2-atoms.png" class="d-block w-100" alt="Atomic Design Components - Atoms">
               </div>
               <div class="carousel-item">
-                <img src="../assets/descontos-library/methodology-3-molecules.png" class="d-block w-100" alt="Atomic Design Components - Molecules">
+                <img src="/assets/descontos-library/methodology-3-molecules.png" class="d-block w-100" alt="Atomic Design Components - Molecules">
               </div>
               <div class="carousel-item">
-                <img src="../assets/descontos-library/methodology-4-organisms.png" class="d-block w-100" alt="Atomic Design Components - Organisms">
+                <img src="/assets/descontos-library/methodology-4-organisms.png" class="d-block w-100" alt="Atomic Design Components - Organisms">
               </div>
               <div class="carousel-item">
-                <img src="../assets/descontos-library/methodology-5-templates.png" class="d-block w-100" alt="Atomic Design Components - Templates">
+                <img src="/assets/descontos-library/methodology-5-templates.png" class="d-block w-100" alt="Atomic Design Components - Templates">
               </div>
               <div class="carousel-item">
-                <img src="../assets/descontos-library/methodology-6-pages.png" class="d-block w-100" alt="Atomic Design Components - Pages">
+                <img src="/assets/descontos-library/methodology-6-pages.png" class="d-block w-100" alt="Atomic Design Components - Pages">
               </div>
             </div>
 
@@ -160,14 +160,14 @@
         <p>One of the most interesting parts of this project was how I separated the high-level structures. I created a set of Templates that acted as the skeleton of the product and these were built using simple images and placeholder text to show the layout. Then I created a separate layer for Pages. These pages were actually different components that used the templates as their base but they allowed designers to override the content with realistic images and actual copy. This workflow was a game changer because it let us test real scenarios and mockups while keeping the underlying structure totally intact.</p>
 
         <div class="row g-0 my-5">
-          <img src="../assets/descontos-library/templatesXPages.png" alt="A side-by-side comparison showing a structural Template with placeholders and the final Page component with realistic content and overrides." class="col-12 col-sm-12 col-lg-12 my-3">
+          <img src="/assets/descontos-library/templatesXPages.png" alt="A side-by-side comparison showing a structural Template with placeholders and the final Page component with realistic content and overrides." class="col-12 col-sm-12 col-lg-12 my-3">
         </div>
 
         <h3>Design Proposal Table: Speaking the language of product</h3>
         <p>To bridge the gap between design vision and product management I created a Design Proposal Table. This was my main tool for arguing in favor of the project with POs and PMs. I mapped out the current state of the product versus the proposed new version and I added a column for UX Reasons. In this column I used data and heuristics to explain exactly why each change would improve user satisfaction and conversion. This artifact transformed a simple visual update into a documented business case making it much easier to show the tangible value of our design work.</p>
 
         <div class="row g-0 my-5">
-          <img src="../assets/descontos-library/designProposalTable.png" alt="A screenshot of the comparison table showing the 'Before', 'New', and 'UX Reasons' columns with detailed annotations." class="col-12 col-sm-12 col-lg-12 my-3">
+          <img src="/assets/descontos-library/designProposalTable.png" alt="A screenshot of the comparison table showing the 'Before', 'New', and 'UX Reasons' columns with detailed annotations." class="col-12 col-sm-12 col-lg-12 my-3">
         </div>
 
         <h3>Final Artifact: Lessons in Resilience</h3>
@@ -181,6 +181,6 @@
   <div id="footer-placeholder"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="../js/script.js"></script>
+  <script src="/js/script.js"></script>
 </body>
 </html>
