--- a/projects/dinnie-app.html
+++ b/projects/dinnie-app.html
@@ -9,15 +9,15 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="../css/colors.css">
-    <link rel="stylesheet" href="../css/typography.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/cards.css">
-    <link rel="stylesheet" href="../css/carousel.css">
-    <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/table.css">
-    <link rel="stylesheet" href="../css/tags.css">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="/css/colors.css">
+    <link rel="stylesheet" href="/css/typography.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/cards.css">
+    <link rel="stylesheet" href="/css/carousel.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/table.css">
+    <link rel="stylesheet" href="/css/tags.css">
+    <link rel="stylesheet" href="/css/styles.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -63,14 +63,14 @@
 
             <h3>App Personas</h3>
             <div class="row g-0 mb-3">
-                <img src="../assets/dinnie-app/Claudia_Tabela.png" alt="Claudia Persona" class="col-12 col-md-6 img-fluid">
-                <img src="../assets/dinnie-app/Cleber_Tabela.png" alt="Cleber Persona" class="col-12 col-md-6 img-fluid">            
+                <img src="/assets/dinnie-app/Claudia_Tabela.png" alt="Claudia Persona" class="col-12 col-md-6 img-fluid">
+                <img src="/assets/dinnie-app/Cleber_Tabela.png" alt="Cleber Persona" class="col-12 col-md-6 img-fluid">            
             </div>
             <p class="mb-5">To all ages, to all diets. We projected Cláudia and Cléber as personas that group characteristics from our target audience: a person that is conscious about the environmental impact that their eating behaviour causes. Wanna have a tasty and sustainable diet?! Come to Dinnie!</p>
             
             <h3>User Interface</h3>
             <div class="row g-0 mb-3">
-                <img src="../assets/dinnie-app/Interface_Infografico.png" alt="User interface" class="img-fluid w-100">     
+                <img src="/assets/dinnie-app/Interface_Infografico.png" alt="User interface" class="img-fluid w-100">     
             </div>
             <p class="mb-5">With Dinnie, you can read, write, and share content within themed groups — and even push it out to other platforms. Groups support all kinds of media: audio, video, photos, text, and quotes. When someone signs up, they take a quick profile quiz with questions about their eating habits and goals for behavior change. Based on that, Dinnie personalizes the experience using an algorithm that recommends content that’s been relevant to people with similar profiles.</p>
 
@@ -86,19 +86,19 @@
 
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="../assets/dinnie-app/IdentidadeVisual_Infografico.png" class="d-block w-100" alt="Dinnie Visual Identity Explanation">
+                        <img src="/assets/dinnie-app/IdentidadeVisual_Infografico.png" class="d-block w-100" alt="Dinnie Visual Identity Explanation">
                     </div>
                     <div class="carousel-item">
-                        <img src="../assets/dinnie-app/Espacamento_3x.png" class="d-block w-100" alt="Spacing In Logotype">
+                        <img src="/assets/dinnie-app/Espacamento_3x.png" class="d-block w-100" alt="Spacing In Logotype">
                     </div>
                     <div class="carousel-item">
-                        <img src="../assets/dinnie-app/Paleta_de_Cores_3x.png" class="d-block w-100" alt="Color Palete">   
+                        <img src="/assets/dinnie-app/Paleta_de_Cores_3x.png" class="d-block w-100" alt="Color Palete">   
                     </div>
                     <div class="carousel-item">
-                        <img src="../assets/dinnie-app/Iconografia.png" class="d-block w-100" alt="Dinnie Iconography">
+                        <img src="/assets/dinnie-app/Iconografia.png" class="d-block w-100" alt="Dinnie Iconography">
                     </div>
                     <div class="carousel-item">
-                        <img src="../assets/dinnie-app/Info_MascDeCorte.png" class="d-block w-100" alt="Dinnie Clipping Mask">
+                        <img src="/assets/dinnie-app/Info_MascDeCorte.png" class="d-block w-100" alt="Dinnie Clipping Mask">
                     </div>
                 </div>
 
@@ -123,7 +123,7 @@
 
             <h3>Project final report</h3>
             <div style="aspect-ratio: 1.414; width: 100%;">
-                <iframe src="../assets/dinnie-app/dsg1004_2019-2_Dinnie_1AC-1AD_RELATORIO.pdf" width="100%" height="700" style="border: none;"></iframe>
+                <iframe src="/assets/dinnie-app/dsg1004_2019-2_Dinnie_1AC-1AD_RELATORIO.pdf" width="100%" height="700" style="border: none;"></iframe>
             </div>
         </section>
     </main>
@@ -131,6 +131,6 @@
     <div id="footer-placeholder"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../js/script.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 </html>
