--- a/projects/dodging-for-treasure.html
+++ b/projects/dodging-for-treasure.html
@@ -9,15 +9,15 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="../css/colors.css">
-    <link rel="stylesheet" href="../css/typography.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/cards.css">
-    <link rel="stylesheet" href="../css/carousel.css">
-    <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/table.css">
-    <link rel="stylesheet" href="../css/tags.css">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="/css/colors.css">
+    <link rel="stylesheet" href="/css/typography.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/cards.css">
+    <link rel="stylesheet" href="/css/carousel.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/table.css">
+    <link rel="stylesheet" href="/css/tags.css">
+    <link rel="stylesheet" href="/css/styles.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,7 +31,7 @@
     <main class="project-page">
         <section class="container-xxl">
             <div class="row g-0">
-                <img src="../assets/dodging-for-treasure/Printscreen_InGame.png" alt="Dodging for Treasures Cover" class="col-12 img-fluid">
+                <img src="/assets/dodging-for-treasure/Printscreen_InGame.png" alt="Dodging for Treasures Cover" class="col-12 img-fluid">
             </div>
         </section>
 
@@ -61,10 +61,10 @@
 
             <div class="row g-0 my-4 gap-2 gap-md-0">
                 <div class="col-12 col-md-6">
-                    <img src="../assets/dodging-for-treasure/Printscreen_InGame.png" alt="In-game screenshot" class="img-fluid">
+                    <img src="/assets/dodging-for-treasure/Printscreen_InGame.png" alt="In-game screenshot" class="img-fluid">
                 </div>
                 <div class="col-12 col-md-6">
-                    <img src="../assets/dodging-for-treasure/Buffs_Explained_v4.png" alt="Buffs explanation" class="img-fluid">
+                    <img src="/assets/dodging-for-treasure/Buffs_Explained_v4.png" alt="Buffs explanation" class="img-fluid">
                 </div>
             </div>
 
@@ -84,6 +84,6 @@
     <div id="footer-placeholder"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../js/script.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 </html>
