--- a/projects/harry-potter.html
+++ b/projects/harry-potter.html
@@ -9,15 +9,15 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="../css/colors.css">
-    <link rel="stylesheet" href="../css/typography.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/cards.css">
-    <link rel="stylesheet" href="../css/carousel.css">
-    <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/table.css">
-    <link rel="stylesheet" href="../css/tags.css">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="/css/colors.css">
+    <link rel="stylesheet" href="/css/typography.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/cards.css">
+    <link rel="stylesheet" href="/css/carousel.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/table.css">
+    <link rel="stylesheet" href="/css/tags.css">
+    <link rel="stylesheet" href="/css/styles.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,7 +30,7 @@
     <main class="project-page">
         <section class="container-xxl">
             <div class="row g-0">
-                <img src="../assets/harry-potter/HarryPotterEOMinimalismoEstetico_0.png" alt="Harry Potter Minimalist Cover" class="col-12 img-fluid">
+                <img src="/assets/harry-potter/HarryPotterEOMinimalismoEstetico_0.png" alt="Harry Potter Minimalist Cover" class="col-12 img-fluid">
             </div>
         </section>
 
@@ -61,16 +61,16 @@
             <p class="mb-5">A series of three digital illustrations in which the esthetic minimalism is shown by unifying three iconic book covers from the classic books of Harry Potter using only 12 colors and geometric shapes.</p>
 
             <div class="row g-0 my-5">
-                <img src="../assets/harry-potter/HarryPotterEOMinimalismoEstetico_Capa.jpg" alt="Harry Potter e a Pedra Filosofal" class="col-12 img-fluid">
+                <img src="/assets/harry-potter/HarryPotterEOMinimalismoEstetico_Capa.jpg" alt="Harry Potter e a Pedra Filosofal" class="col-12 img-fluid">
             </div>
             <div class="row g-0 my-5">
-                <img src="../assets/harry-potter/HarryPotterEOMinimalismoEstetico_4.jpeg" alt="Harry Potter e o Cálice de Fogo" class="col-12 img-fluid">
+                <img src="/assets/harry-potter/HarryPotterEOMinimalismoEstetico_4.jpeg" alt="Harry Potter e o Cálice de Fogo" class="col-12 img-fluid">
             </div>
             <div class="row g-0 my-5">
-                <img src="../assets/harry-potter/HarryPotterEOMinimalismoEstetico_5.jpeg" alt="Harry Potter e as Reliquias da Morte" class="col-12 img-fluid">                        
+                <img src="/assets/harry-potter/HarryPotterEOMinimalismoEstetico_5.jpeg" alt="Harry Potter e as Reliquias da Morte" class="col-12 img-fluid">                        
             </div>
             <div class="row g-0 my-5">
-                <img src="../assets/harry-potter/HarryPotterEOMinimalismoEstetico_7.jpg" alt="Tipographic Transformation" class="col-12 img-fluid">
+                <img src="/assets/harry-potter/HarryPotterEOMinimalismoEstetico_7.jpg" alt="Tipographic Transformation" class="col-12 img-fluid">
             </div>
         </section>
     </main>
@@ -78,6 +78,6 @@
     <div id="footer-placeholder"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../js/script.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 </html>
