--- a/projects/milejao.html
+++ b/projects/milejao.html
@@ -9,15 +9,15 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="../css/colors.css">
-    <link rel="stylesheet" href="../css/typography.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/cards.css">
-    <link rel="stylesheet" href="../css/carousel.css">
-    <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/table.css">
-    <link rel="stylesheet" href="../css/tags.css">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="/css/colors.css">
+    <link rel="stylesheet" href="/css/typography.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/cards.css">
+    <link rel="stylesheet" href="/css/carousel.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/table.css">
+    <link rel="stylesheet" href="/css/tags.css">
+    <link rel="stylesheet" href="/css/styles.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,7 +30,7 @@
     <main class="project-page">
         <section class="container-xxl">
             <div class="row g-0">
-                <img src="../assets/milejao/BESFCMJ-3.jpg" alt="Milejão Cover" class="w-100 d-block">
+                <img src="/assets/milejao/BESFCMJ-3.jpg" alt="Milejão Cover" class="w-100 d-block">
             </div>
         </section>
 
@@ -62,7 +62,7 @@
 
             <h3>Visual Identity Concept</h3>
             <div class="row g-0 mb-4">
-                <img src="../assets/milejao/ProdFinalModulo1.png" alt="Project sketch concept" class="img-fluid w-100">       
+                <img src="/assets/milejao/ProdFinalModulo1.png" alt="Project sketch concept" class="img-fluid w-100">       
             </div>
             <p class="mb-5">The content of the book demands active participation from the reader. Thus, It is impressed only in black-and-white so It can be colored by the will of the owner of the book. The bookbinding was made in a simple hotmelt to assure the durability necessary to many manipulations the book is going to suffer.</p>
 
@@ -82,31 +82,31 @@
 
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="../assets/milejao/BESFCMJ-3.jpg" class="d-block w-100" alt="Book Cover">
+                            <img src="/assets/milejao/BESFCMJ-3.jpg" class="d-block w-100" alt="Book Cover">
                         </div>
                         <div class="carousel-item">
-                            <img src="../assets/milejao/BESFCMJ-4.jpg" class="d-block w-100" alt="Book Internal Page 4">
+                            <img src="/assets/milejao/BESFCMJ-4.jpg" class="d-block w-100" alt="Book Internal Page 4">
                         </div>
                         <div class="carousel-item">
-                            <img src="../assets/milejao/BESFCMJ-5.jpg" class="d-block w-100" alt="Book Internal Page 5">
+                            <img src="/assets/milejao/BESFCMJ-5.jpg" class="d-block w-100" alt="Book Internal Page 5">
                         </div>
                         <div class="carousel-item">
-                            <img src="../assets/milejao/BESFCMJ-6.jpg" class="d-block w-100" alt="Book Internal Page 6">
+                            <img src="/assets/milejao/BESFCMJ-6.jpg" class="d-block w-100" alt="Book Internal Page 6">
                         </div>
                         <div class="carousel-item">
-                            <img src="../assets/milejao/BESFCMJ-8.jpg" class="d-block w-100" alt="Book Internal Page 8">
+                            <img src="/assets/milejao/BESFCMJ-8.jpg" class="d-block w-100" alt="Book Internal Page 8">
                         </div>
                         <div class="carousel-item">
-                            <img src="../assets/milejao/BESFCMJ-9.jpg" class="d-block w-100" alt="Book Internal Page 9">
+                            <img src="/assets/milejao/BESFCMJ-9.jpg" class="d-block w-100" alt="Book Internal Page 9">
                         </div>
                         <div class="carousel-item">
-                            <img src="../assets/milejao/BESFCMJ-10.jpg" class="d-block w-100" alt="Book Internal Page 10">
+                            <img src="/assets/milejao/BESFCMJ-10.jpg" class="d-block w-100" alt="Book Internal Page 10">
                         </div>
                         <div class="carousel-item">
-                            <img src="../assets/milejao/BESFCMJ-11.jpg" class="d-block w-100" alt="Book Internal Page 11">
+                            <img src="/assets/milejao/BESFCMJ-11.jpg" class="d-block w-100" alt="Book Internal Page 11">
                         </div>
                         <div class="carousel-item">
-                            <img src="../assets/milejao/BESFCMJ-12.jpg" class="d-block w-100" alt="Book Internal Page 12">
+                            <img src="/assets/milejao/BESFCMJ-12.jpg" class="d-block w-100" alt="Book Internal Page 12">
                         </div>
                     </div>
 
@@ -122,7 +122,7 @@
 
             <h3>Project Final Report</h3>
             <div style="aspect-ratio: 1.414; width: 100%;" class="mb-5">
-                <iframe src="../assets/milejao/Book-BESFCMJ.pdf" width="100%" height="700" style="border: none;"></iframe>
+                <iframe src="/assets/milejao/Book-BESFCMJ.pdf" width="100%" height="700" style="border: none;"></iframe>
             </div>
         </section>
     </main>
@@ -130,6 +130,6 @@
     <div id="footer-placeholder"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../js/script.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 </html>
