--- a/projects/pikachu.html
+++ b/projects/pikachu.html
@@ -9,15 +9,15 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="../css/colors.css">
-    <link rel="stylesheet" href="../css/typography.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/cards.css">
-    <link rel="stylesheet" href="../css/carousel.css">
-    <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/table.css">
-    <link rel="stylesheet" href="../css/tags.css">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="/css/colors.css">
+    <link rel="stylesheet" href="/css/typography.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/cards.css">
+    <link rel="stylesheet" href="/css/carousel.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/table.css">
+    <link rel="stylesheet" href="/css/tags.css">
+    <link rel="stylesheet" href="/css/styles.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,7 +31,7 @@
         <section class="container-xxl">
             <div class="row g-0">
                 <div class="col-12">
-                    <img src="../assets/pikachu/CapaBehance.jpg" alt="Pikachu Calendar Cover" class="img-fluid w-100">
+                    <img src="/assets/pikachu/CapaBehance.jpg" alt="Pikachu Calendar Cover" class="img-fluid w-100">
                 </div>
             </div>
         </section>
@@ -80,19 +80,19 @@
                 </div>
 
                 <div class="carousel-inner">
-                    <div class="carousel-item active"><img src="../assets/pikachu/MockUp_Calendario.png" class="d-block w-100" alt="Janeiro"></div>
-                    <div class="carousel-item"><img src="../assets/pikachu/MockUp_Calendario_2.png" class="d-block w-100" alt="Fevereiro"></div>
-                    <div class="carousel-item"><img src="../assets/pikachu/MockUp_Calendario_3.png" class="d-block w-100" alt="Março"></div>
-                    <div class="carousel-item"><img src="../assets/pikachu/MockUp_Calendario_4.png" class="d-block w-100" alt="Abril"></div>
-                    <div class="carousel-item"><img src="../assets/pikachu/MockUp_Calendario_5.png" class="d-block w-100" alt="Maio"></div>
-                    <div class="carousel-item"><img src="../assets/pikachu/MockUp_Calendario_6.png" class="d-block w-100" alt="Junho"></div>
-                    <div class="carousel-item"><img src="../assets/pikachu/MockUp_Calendario_7.png" class="d-block w-100" alt="Julho"></div>
-                    <div class="carousel-item"><img src="../assets/pikachu/MockUp_Calendario_8.png" class="d-block w-100" alt="Agosto"></div>
-                    <div class="carousel-item"><img src="../assets/pikachu/MockUp_Calendario_9.png" class="d-block w-100" alt="Setembro"></div>
-                    <div class="carousel-item"><img src="../assets/pikachu/MockUp_Calendario_10.png" class="d-block w-100" alt="Outubro"></div>
-                    <div class="carousel-item"><img src="../assets/pikachu/MockUp_Calendario_11.png" class="d-block w-100" alt="Novembro"></div>
-                    <div class="carousel-item"><img src="../assets/pikachu/MockUp_Calendario_12.png" class="d-block w-100" alt="Dezembro"></div>
-                    <div class="carousel-item"><img src="../assets/pikachu/MockUp_Calendario_13.png" class="d-block w-100" alt="Dezembro"></div>
+                    <div class="carousel-item active"><img src="/assets/pikachu/MockUp_Calendario.png" class="d-block w-100" alt="Janeiro"></div>
+                    <div class="carousel-item"><img src="/assets/pikachu/MockUp_Calendario_2.png" class="d-block w-100" alt="Fevereiro"></div>
+                    <div class="carousel-item"><img src="/assets/pikachu/MockUp_Calendario_3.png" class="d-block w-100" alt="Março"></div>
+                    <div class="carousel-item"><img src="/assets/pikachu/MockUp_Calendario_4.png" class="d-block w-100" alt="Abril"></div>
+                    <div class="carousel-item"><img src="/assets/pikachu/MockUp_Calendario_5.png" class="d-block w-100" alt="Maio"></div>
+                    <div class="carousel-item"><img src="/assets/pikachu/MockUp_Calendario_6.png" class="d-block w-100" alt="Junho"></div>
+                    <div class="carousel-item"><img src="/assets/pikachu/MockUp_Calendario_7.png" class="d-block w-100" alt="Julho"></div>
+                    <div class="carousel-item"><img src="/assets/pikachu/MockUp_Calendario_8.png" class="d-block w-100" alt="Agosto"></div>
+                    <div class="carousel-item"><img src="/assets/pikachu/MockUp_Calendario_9.png" class="d-block w-100" alt="Setembro"></div>
+                    <div class="carousel-item"><img src="/assets/pikachu/MockUp_Calendario_10.png" class="d-block w-100" alt="Outubro"></div>
+                    <div class="carousel-item"><img src="/assets/pikachu/MockUp_Calendario_11.png" class="d-block w-100" alt="Novembro"></div>
+                    <div class="carousel-item"><img src="/assets/pikachu/MockUp_Calendario_12.png" class="d-block w-100" alt="Dezembro"></div>
+                    <div class="carousel-item"><img src="/assets/pikachu/MockUp_Calendario_13.png" class="d-block w-100" alt="Dezembro"></div>
                 </div>
 
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselPikachu" data-bs-slide="prev">
@@ -107,7 +107,7 @@
 
             <div class="row g-0 my-5">
                 <div class="col-12">
-                    <img src="../assets/pikachu/MockUp_Papel.png" alt="Month Montage" class="img-fluid w-100">
+                    <img src="/assets/pikachu/MockUp_Papel.png" alt="Month Montage" class="img-fluid w-100">
                 </div>
             </div>
         </section>
@@ -116,6 +116,6 @@
     <div id="footer-placeholder"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../js/script.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 </html>
