--- a/projects/plexo-arte.html
+++ b/projects/plexo-arte.html
@@ -9,15 +9,15 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="../css/colors.css">
-    <link rel="stylesheet" href="../css/typography.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/cards.css">
-    <link rel="stylesheet" href="../css/carousel.css">
-    <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/table.css">
-    <link rel="stylesheet" href="../css/tags.css">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="/css/colors.css">
+    <link rel="stylesheet" href="/css/typography.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/cards.css">
+    <link rel="stylesheet" href="/css/carousel.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/table.css">
+    <link rel="stylesheet" href="/css/tags.css">
+    <link rel="stylesheet" href="/css/styles.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,7 +30,7 @@
   <main class="project-page">
     <section id="plexoArte" class="container-fluid px-4 px-md-5">
         <div class="row g-0">
-          <img src="../assets/plexo-arte/PlexoArte_Capa.gif" alt="logo" class="col-12 col-sm-12 col-lg-12">
+          <img src="/assets/plexo-arte/PlexoArte_Capa.gif" alt="logo" class="col-12 col-sm-12 col-lg-12">
         </div>
 
         <h1>Plexo Arte</h1>
@@ -73,40 +73,40 @@
 
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="../assets/plexo-arte/Colors.jpg" class="d-block w-100" alt="Colors">
+              <img src="/assets/plexo-arte/Colors.jpg" class="d-block w-100" alt="Colors">
             </div>
             <div class="carousel-item">
-              <img src="../assets/plexo-arte/EventCover.jpg" class="d-block w-100" alt="EventCover">
+              <img src="/assets/plexo-arte/EventCover.jpg" class="d-block w-100" alt="EventCover">
             </div>
             <div class="carousel-item">
-              <img src="../assets/plexo-arte/EventPoster.jpg" class="d-block w-100" alt="EventPoster">
+              <img src="/assets/plexo-arte/EventPoster.jpg" class="d-block w-100" alt="EventPoster">
             </div>
             <div class="carousel-item">
-              <img src="../assets/plexo-arte/FacebookEvent.jpg" class="d-block w-100" alt="FacebookEvent">
+              <img src="/assets/plexo-arte/FacebookEvent.jpg" class="d-block w-100" alt="FacebookEvent">
             </div>
             <div class="carousel-item">
-              <img src="../assets/plexo-arte/FacebookPage.jpg" class="d-block w-100" alt="FacebookPage">
+              <img src="/assets/plexo-arte/FacebookPage.jpg" class="d-block w-100" alt="FacebookPage">
             </div>
             <div class="carousel-item">
-              <img src="../assets/plexo-arte/Icon.jpg" class="d-block w-100" alt="Icon">
+              <img src="/assets/plexo-arte/Icon.jpg" class="d-block w-100" alt="Icon">
             </div>
             <div class="carousel-item">
-              <img src="../assets/plexo-arte/Instagram_Post.jpg" class="d-block w-100" alt="Instagram_Post">
+              <img src="/assets/plexo-arte/Instagram_Post.jpg" class="d-block w-100" alt="Instagram_Post">
             </div>
             <div class="carousel-item">
-              <img src="../assets/plexo-arte/Reduction.jpg" class="d-block w-100" alt="Reduction">
+              <img src="/assets/plexo-arte/Reduction.jpg" class="d-block w-100" alt="Reduction">
             </div>
             <div class="carousel-item">
-              <img src="../assets/plexo-arte/Site.jpg" class="d-block w-100" alt="Site">
+              <img src="/assets/plexo-arte/Site.jpg" class="d-block w-100" alt="Site">
             </div>
             <div class="carousel-item">
-              <img src="../assets/plexo-arte/Spacing.jpg" class="d-block w-100" alt="Spacing">
+              <img src="/assets/plexo-arte/Spacing.jpg" class="d-block w-100" alt="Spacing">
             </div>
             <div class="carousel-item">
-              <img src="../assets/plexo-arte/Typography.jpg" class="d-block w-100" alt="Typography">
+              <img src="/assets/plexo-arte/Typography.jpg" class="d-block w-100" alt="Typography">
             </div>
             <div class="carousel-item">
-              <img src="../assets/plexo-arte/Applications.jpg" class="d-block w-100" alt="Applications">
+              <img src="/assets/plexo-arte/Applications.jpg" class="d-block w-100" alt="Applications">
             </div>
           </div>
 
@@ -137,7 +137,7 @@
 
         <h3>Project final report</h3>
           <div style="aspect-ratio: 1.414; width: 100%;">
-            <iframe src="../assets/plexo-arte/G2-DSG1003-PlexoArte.pdf" width="100%;" height="700pix;" style="border: none;">
+            <iframe src="/assets/plexo-arte/G2-DSG1003-PlexoArte.pdf" width="100%;" height="700pix;" style="border: none;">
             </iframe>
           </div>
     </section>
@@ -147,7 +147,7 @@
   <div id="footer-placeholder"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../js/script.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 </html>
 
