--- a/projects/strawberry-popsicles.html
+++ b/projects/strawberry-popsicles.html
@@ -9,15 +9,15 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="../css/colors.css">
-    <link rel="stylesheet" href="../css/typography.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/cards.css">
-    <link rel="stylesheet" href="../css/carousel.css">
-    <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/table.css">
-    <link rel="stylesheet" href="../css/tags.css">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="/css/colors.css">
+    <link rel="stylesheet" href="/css/typography.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/cards.css">
+    <link rel="stylesheet" href="/css/carousel.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/table.css">
+    <link rel="stylesheet" href="/css/tags.css">
+    <link rel="stylesheet" href="/css/styles.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,7 +29,7 @@
   
   <main class="project-page">
     <section id="strawberryPopsicles" class="container-fluid px-4 px-md-5">
-      <img src="../assets/strawberry-popsicles/GeladinhosDeMorango-1.png" alt="Cover" class="col-12 col-sm-12 col-lg-12">    
+      <img src="/assets/strawberry-popsicles/GeladinhosDeMorango-1.png" alt="Cover" class="col-12 col-sm-12 col-lg-12">    
       </iframe>
 
         <h1>Strawberry Popsicles</h1>
@@ -57,23 +57,23 @@
         <p>Three icon's series based on Katy Pery's This "This is how we do" video clip. Relating the predominance of brown and pink with chocolate and strawberry flavors, respectively, I've created fancy ice creams just like we can see in the video. This project was the final result of learning how to use Adobe Illustrator inside one of the college classes I took.</p>
 
         <div class="row g-0">
-          <img src="../assets/strawberry-popsicles/GeladinhosDeMorango-2.png" alt="Harry Potter e a Pedra Filosofal" class="col-4 col-sm-6 col-lg-4">
-          <img src="../assets/strawberry-popsicles/GeladinhosDeMorango-3.jpg" alt="Harry Potter e a Pedra Filosofal" class="col-4 col-sm-6 col-lg-4">
-          <img src="../assets/strawberry-popsicles/GeladinhosDeMorango-4.jpg" alt="Harry Potter e o Cálice de Fogo" class="col-4 col-sm-6 col-lg-4">
+          <img src="/assets/strawberry-popsicles/GeladinhosDeMorango-2.png" alt="Harry Potter e a Pedra Filosofal" class="col-4 col-sm-6 col-lg-4">
+          <img src="/assets/strawberry-popsicles/GeladinhosDeMorango-3.jpg" alt="Harry Potter e a Pedra Filosofal" class="col-4 col-sm-6 col-lg-4">
+          <img src="/assets/strawberry-popsicles/GeladinhosDeMorango-4.jpg" alt="Harry Potter e o Cálice de Fogo" class="col-4 col-sm-6 col-lg-4">
         </div>
         <div class="row g-0">
-          <img src="../assets/strawberry-popsicles/GeladinhosDeMorango-6.jpg" alt="Harry Potter e o Cálice de Fogo" class="col-4 col-sm-6 col-lg-4">
-          <img src="../assets/strawberry-popsicles/GeladinhosDeMorango-7.jpg" alt="Harry Potter e o Cálice de Fogo" class="col-4 col-sm-6 col-lg-4">         
-          <img src="../assets/strawberry-popsicles/GeladinhosDeMorango-5.jpg" alt="Harry Potter e o Cálice de Fogo" class="col-4 col-sm-6 col-lg-4">           
+          <img src="/assets/strawberry-popsicles/GeladinhosDeMorango-6.jpg" alt="Harry Potter e o Cálice de Fogo" class="col-4 col-sm-6 col-lg-4">
+          <img src="/assets/strawberry-popsicles/GeladinhosDeMorango-7.jpg" alt="Harry Potter e o Cálice de Fogo" class="col-4 col-sm-6 col-lg-4">         
+          <img src="/assets/strawberry-popsicles/GeladinhosDeMorango-5.jpg" alt="Harry Potter e o Cálice de Fogo" class="col-4 col-sm-6 col-lg-4">           
         </div>
         <div class="row g-0">
-          <img src="../assets/strawberry-popsicles/GeladinhosDeMorango-8.png"alt="Tipographic Transformation" class="col-12 col-sm-12 col-lg-12">
+          <img src="/assets/strawberry-popsicles/GeladinhosDeMorango-8.png"alt="Tipographic Transformation" class="col-12 col-sm-12 col-lg-12">
         </div>
     </section>
 
   <div id="footer-placeholder"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="../js/script.js"></script>
+  <script src="/js/script.js"></script>
 </body>
 </html>
