Fix asset path case-sensitivity for GitHub Pages (Linux filesystem)
- Convert all asset paths to lowercase to match actual filenames
- Fixes broken image loading on GitHub Pages due to case-sensitive Linux servers
- Updated paths in header.html and all 13 project files:
  * header.html: logo path
  * strawberry-popsicles.html: 8 images
  * riccch-ladies.html: 39 images across 3 characters
  * plexo-arte.html: 12 carousel images
  * pikachu.html: 14 mockup images
  * milejao.html: 10 book carousel images
  * harry-potter.html: 5 book cover images
  * gamezilla.html: 9 design process images
  * games-hub.html: hero image
  * cuca-catch.html: 3 game images
  * dinnie-app.html: 7 design system images
  * dodging-for-treasure.html: 3 game screenshots
  * einsteroids.html: 3 game screenshots

--- a/projects/plexo-arte.html
+++ b/projects/plexo-arte.html
@@ -30,7 +30,7 @@
   <main class="project-page">
     <section id="plexoArte" class="container-fluid px-4 px-md-5">
         <div class="row g-0">
-          <img src="/assets/plexo-arte/PlexoArte_Capa.gif" alt="logo" class="col-12 col-sm-12 col-lg-12">
+          <img src="/assets/plexo-arte/plexoarte_capa.gif" alt="logo" class="col-12 col-sm-12 col-lg-12">
         </div>
 
         <h1>Plexo Arte</h1>
@@ -73,40 +73,40 @@
 
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="/assets/plexo-arte/Colors.jpg" class="d-block w-100" alt="Colors">
+              <img src="/assets/plexo-arte/colors.jpg" class="d-block w-100" alt="Colors">
             </div>
             <div class="carousel-item">
-              <img src="/assets/plexo-arte/EventCover.jpg" class="d-block w-100" alt="EventCover">
+              <img src="/assets/plexo-arte/eventcover.jpg" class="d-block w-100" alt="EventCover">
             </div>
             <div class="carousel-item">
-              <img src="/assets/plexo-arte/EventPoster.jpg" class="d-block w-100" alt="EventPoster">
+              <img src="/assets/plexo-arte/eventposter.jpg" class="d-block w-100" alt="EventPoster">
             </div>
             <div class="carousel-item">
-              <img src="/assets/plexo-arte/FacebookEvent.jpg" class="d-block w-100" alt="FacebookEvent">
+              <img src="/assets/plexo-arte/facebookevent.jpg" class="d-block w-100" alt="FacebookEvent">
             </div>
             <div class="carousel-item">
-              <img src="/assets/plexo-arte/FacebookPage.jpg" class="d-block w-100" alt="FacebookPage">
+              <img src="/assets/plexo-arte/facebookpage.jpg" class="d-block w-100" alt="FacebookPage">
             </div>
             <div class="carousel-item">
-              <img src="/assets/plexo-arte/Icon.jpg" class="d-block w-100" alt="Icon">
+              <img src="/assets/plexo-arte/icon.jpg" class="d-block w-100" alt="Icon">
             </div>
             <div class="carousel-item">
-              <img src="/assets/plexo-arte/Instagram_Post.jpg" class="d-block w-100" alt="Instagram_Post">
+              <img src="/assets/plexo-arte/instagram_post.jpg" class="d-block w-100" alt="Instagram_Post">
             </div>
             <div class="carousel-item">
-              <img src="/assets/plexo-arte/Reduction.jpg" class="d-block w-100" alt="Reduction">
+              <img src="/assets/plexo-arte/reduction.jpg" class="d-block w-100" alt="Reduction">
             </div>
             <div class="carousel-item">
-              <img src="/assets/plexo-arte/Site.jpg" class="d-block w-100" alt="Site">
+              <img src="/assets/plexo-arte/site.jpg" class="d-block w-100" alt="Site">
             </div>
             <div class="carousel-item">
-              <img src="/assets/plexo-arte/Spacing.jpg" class="d-block w-100" alt="Spacing">
+              <img src="/assets/plexo-arte/spacing.jpg" class="d-block w-100" alt="Spacing">
             </div>
             <div class="carousel-item">
-              <img src="/assets/plexo-arte/Typography.jpg" class="d-block w-100" alt="Typography">
+              <img src="/assets/plexo-arte/tipography.jpg" class="d-block w-100" alt="Typography">
             </div>
             <div class="carousel-item">
-              <img src="/assets/plexo-arte/Applications.jpg" class="d-block w-100" alt="Applications">
+              <img src="/assets/plexo-arte/applications.jpg" class="d-block w-100" alt="Applications">
             </div>
           </div>
 
