--- a/projects/gamezilla.html
+++ b/projects/gamezilla.html
@@ -30,7 +30,7 @@
     <main class="project-page">
         <section class="container-xxl">
             <div class="row g-0">
-                <img src="/assets/gamezilla/Wallpaper.png" alt="Gamezilla Wallpaper" class="col-12 img-fluid">
+                <img src="/assets/gamezilla/wallpaper.png" alt="Gamezilla Wallpaper" class="col-12 img-fluid">
             </div>
         </section>
 
@@ -65,10 +65,10 @@
                 <h4>MoSCoW method</h4>
                 <div class="row g-3 mb-4">
                     <div class="col-12 col-md-6">
-                        <img src="/assets/gamezilla/MoSCoW.png" alt="MoSCoW method explanation" class="img-fluid">
+                        <img src="/assets/gamezilla/moscow.png" alt="MoSCoW method explanation" class="img-fluid">
                     </div>
                     <div class="col-12 col-md-6">
-                        <img src="/assets/gamezilla/A serem posicionadas.png" alt="Features mapping" class="img-fluid">
+                        <img src="/assets/gamezilla/a serem posicionadas.png" alt="Features mapping" class="img-fluid">
                     </div>
                 </div>
                 <p>The product discovery journey began with an extensive <strong>benchmarking</strong> analysis of various browser gaming services currently accessible on the internet. A thorough assessment of both aesthetic and functional elements was conducted to inform the integration of features into a structured framework using the <strong>MoSCoW Method</strong>.</p>
@@ -78,10 +78,10 @@
                 <h4>CSD matrix & Features Map</h4>
                 <div class="row g-3 mb-4">
                     <div class="col-12 col-md-6">
-                        <img src="/assets/gamezilla/Collumns.png" alt="CSD matrix" class="img-fluid">
+                        <img src="/assets/gamezilla/collumns.png" alt="CSD matrix" class="img-fluid">
                     </div>
                     <div class="col-12 col-md-6">
-                        <img src="/assets/gamezilla/Prioridade de Features.png" alt="Features priority map" class="img-fluid">
+                        <img src="/assets/gamezilla/prioridade de features.png" alt="Features priority map" class="img-fluid">
                     </div>
                 </div>
             </div>
@@ -98,11 +98,11 @@
                         <button type="button" data-bs-target="#carouselProtopersonas" data-bs-slide-to="4"></button>
                     </div>
                     <div class="carousel-inner">
-                        <div class="carousel-item active"><img src="/assets/gamezilla/Gamezilla - Protopersona - 01 Gohan.png" class="d-block w-100" alt="Gohan"></div>
-                        <div class="carousel-item"><img src="/assets/gamezilla/Gamezilla - Protopersona - 02 Giselle.png" class="d-block w-100" alt="Giselle"></div>
-                        <div class="carousel-item"><img src="/assets/gamezilla/Gamezilla - Protopersona - 03 Gabriel.png" class="d-block w-100" alt="Gabriel"></div>
-                        <div class="carousel-item"><img src="/assets/gamezilla/Gamezilla - Protopersona - 04 Gustavo.png" class="d-block w-100" alt="Gustavo"></div>
-                        <div class="carousel-item"><img src="/assets/gamezilla/Gamezilla - Protopersona - 05 Geralda.png" class="d-block w-100" alt="Geralda"></div>
+                        <div class="carousel-item active"><img src="/assets/gamezilla/gamezilla - protopersona - 01 gohan.png" class="d-block w-100" alt="Gohan"></div>
+                        <div class="carousel-item"><img src="/assets/gamezilla/gamezilla - protopersona - 02 giselle.png" class="d-block w-100" alt="Giselle"></div>
+                        <div class="carousel-item"><img src="/assets/gamezilla/gamezilla - protopersona - 03 gabriel.png" class="d-block w-100" alt="Gabriel"></div>
+                        <div class="carousel-item"><img src="/assets/gamezilla/gamezilla - protopersona - 04 gustavo.png" class="d-block w-100" alt="Gustavo"></div>
+                        <div class="carousel-item"><img src="/assets/gamezilla/gamezilla - protopersona - 05 geralda.png" class="d-block w-100" alt="Geralda"></div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselProtopersonas" data-bs-slide="prev"><span class="carousel-control-prev-icon custom-arrow"></span></button>
                     <button class="carousel-control-next" type="button" data-bs-target="#carouselProtopersonas" data-bs-slide="next"><span class="carousel-control-next-icon custom-arrow"></span></button>
@@ -113,10 +113,10 @@
                 <h4>Naming</h4>
                 <div class="row g-3 mb-4">
                     <div class="col-12 col-md-6">
-                        <img src="/assets/gamezilla/Visão Geral • DINÂMICA.png" alt="Naming dynamic" class="img-fluid">
+                        <img src="/assets/gamezilla/visão geral • dinâmica.png" alt="Naming dynamic" class="img-fluid">
                     </div>
                     <div class="col-12 col-md-6">
-                        <img src="/assets/gamezilla/Identificação.png" alt="Identification scores" class="img-fluid">
+                        <img src="/assets/gamezilla/identificação.png" alt="Identification scores" class="img-fluid">
                     </div>
                 </div>
                 <p>A naming dynamic was created involving professionals from the UX, Marketing, Dev, and Product departments. The purpose of this activity was to score a series of names in order to find the best among three pillars: 1 - Fun; 2 - Identification; and 3 - Video game. In the end, the winner was: <strong>Gamezilla!</strong></p>
@@ -125,8 +125,8 @@
             <div class="mb-5">
                 <h4>Words cloud & Moodboard</h4>
                 <div class="row g-3">
-                    <div class="col-12 mb-3"><img src="/assets/gamezilla/Nuvem de Palavras.png" alt="Words cloud" class="img-fluid w-100"></div>
-                    <div class="col-12"><img src="/assets/gamezilla/Moodboard.png" alt="Moodboard" class="img-fluid w-100"></div>
+                    <div class="col-12 mb-3"><img src="/assets/gamezilla/nuvem de palavras.png" alt="Words cloud" class="img-fluid w-100"></div>
+                    <div class="col-12"><img src="/assets/gamezilla/moodboard.png" alt="Moodboard" class="img-fluid w-100"></div>
                 </div>
             </div>
 
