Melhorias na página de profile

--- a/projects/about-me.html
+++ b/projects/about-me.html
@@ -33,13 +33,13 @@
     <main class="project-page">
         <section class="hero-section position-relative">
             <div class="hero-strip">
-              <img src="/assets/lucasAraujo-graphism-hero3.png" alt="Hero Banner" class="hero-img">
+              <img src="assets/lucasAraujo-graphism-hero3.png" alt="Hero Banner" class="hero-img">
             </div>
 
             <div class="container h-100 d-flex align-items-end hero-text">
                 <div class="row w-100 align-items-start">
                     <div class="col-md-4 col-lg-3 d-flex flex-column justify-content-start">
-                        <img src="/assets/lucasAraujo-foto.jpg" alt="Minha foto" class="foto-hero">
+                        <img src="assets/lucasAraujo-foto.jpg" alt="Minha foto" class="foto-hero">
                     </div>
 
                     <div class="col-md-8 col-lg-9 d-flex flex-column text-start">
@@ -63,7 +63,6 @@
             <div class="col-12 col-md-6 col-lg-12">
               <h3 class="bio-title">
                 formal education
-                <span class="material-symbols-outlined" style="color: var(--grey-300);">history_edu</span>
               </h3>
 
               <ul class="bio-list list-unstyled ps-0 ms-0">
@@ -94,7 +93,6 @@
             <div class="col-12 col-md-6 col-lg-12">
               <h3 class="bio-title">
                 personal info
-                <span class="material-symbols-outlined" style="color: var(--grey-300);">person_heart</span>
               </h3>
 
               <ul class="bio-list list-unstyled ps-0 ms-0">
@@ -232,7 +230,6 @@
             <div class="col-12 col-md-12 col-lg-12">
               <h3 class="bio-title">
                 volunteer experience
-                <span class="material-symbols-outlined" style="color: var(--grey-300);">volunteer_activism</span>
               </h3>
 
               <ul class="bio-list list-unstyled ps-0 ms-0">
@@ -281,7 +278,6 @@
         <div class="col-12 col-lg-6">
           <h3 class="bio-title">
             professional experience
-            <span class="material-symbols-outlined" style="color: var(--grey-300);">business_center</span>
           </h3>
 
           <ul class="bio-list list-unstyled ps-0 ms-0">
