Melhorias na página de profile

--- a/projects/about-me.html
+++ b/projects/about-me.html
@@ -33,13 +33,13 @@
     <main class="project-page">
         <section class="hero-section position-relative">
             <div class="hero-strip">
-              <img src="assets/lucasaraujo-graphism-hero3.png" alt="Hero Banner" class="hero-img">
+              <img src="/assets/lucasaraujo-graphism-hero3.png" alt="Hero Banner" class="hero-img">
             </div>
 
             <div class="container h-100 d-flex align-items-end hero-text">
                 <div class="row w-100 align-items-start">
                     <div class="col-md-4 col-lg-3 d-flex flex-column justify-content-start">
-                        <img src="assets/lucasaraujo-foto.jpg" alt="Minha foto" class="foto-hero">
+                        <img src="/assets/lucasaraujo-foto.jpg" alt="Minha foto" class="foto-hero">
                     </div>
 
                     <div class="col-md-8 col-lg-9 d-flex flex-column text-start">
