Ajuste em todas as fotos

--- a/projects/gamezilla.html
+++ b/projects/gamezilla.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="/css/tags.css">
     <link rel="stylesheet" href="/css/styles.css">
 
+    <link rel="icon" type="image/png" href="../assets/favicon.png">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Geist:wght@100..900&display=swap" rel="stylesheet">
@@ -134,31 +136,31 @@
                 <h4>Logo and sketches</h4>
                 <div id="carouselSketches" class="carousel slide carousel-wrapper mb-4" data-bs-ride="carousel">
                     <div class="carousel-inner">
-                        <div class="carousel-item active"><img src="/assets/gamezilla/Sketch01.jpg" class="d-block w-75 mx-auto" alt="Sketch 1"></div>
-                        <div class="carousel-item"><img src="/assets/gamezilla/Sketch02.jpg" class="d-block w-75 mx-auto" alt="Sketch 2"></div>
-                        <div class="carousel-item"><img src="/assets/gamezilla/Sketch03.jpg" class="d-block w-75 mx-auto" alt="Sketch 3"></div>
+                        <div class="carousel-item active"><img src="/assets/gamezilla/sketch01.jpg" class="d-block w-75 mx-auto" alt="Sketch 1"></div>
+                        <div class="carousel-item"><img src="/assets/gamezilla/sketch02.jpg" class="d-block w-75 mx-auto" alt="Sketch 2"></div>
+                        <div class="carousel-item"><img src="/assets/gamezilla/sketch03.jpg" class="d-block w-75 mx-auto" alt="Sketch 3"></div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselSketches" data-bs-slide="prev"><span class="carousel-control-prev-icon custom-arrow"></span></button>
                     <button class="carousel-control-next" type="button" data-bs-target="#carouselSketches" data-bs-slide="next"><span class="carousel-control-next-icon custom-arrow"></span></button>
                 </div>
-                <img src="/assets/gamezilla/Logoblue-Gamezilla.png" alt="Final Logo" class="img-fluid w-100">
+                <img src="/assets/gamezilla/logoblue-gamezilla.png" alt="Final Logo" class="img-fluid w-100">
             </div>
 
             <h3>Website MVP</h3>
             <div class="mb-5">
-                <img src="/assets/gamezilla/Gamezilla - User Flow.png" alt="User Flow" class="img-fluid w-100 mb-4">
+                <img src="/assets/gamezilla/gamezilla - user flow.png - User Flow.png" alt="User Flow" class="img-fluid w-100 mb-4">
                 <p>To identify if browser gaming was profitable via ads monetization, we launched a website MVP using NextUI Kit. This co-creation between design and development allowed the team to adhere to the “fail fast” philosophy.</p>
             </div>
 
             <h3>Responsive Design</h3>
             <div class="mb-5">
-                <img src="/assets/gamezilla/ResponsivePages.png" alt="Responsive Pages" class="img-fluid w-100 mb-4">
+                <img src="/assets/gamezilla/responsivepages.png" alt="Responsive Pages" class="img-fluid w-100 mb-4">
                 <p>During the hand-off process, we chose to design for six different screen types and resolutions: A - Desktop Large (1920x1080 px); B - Desktop (1440x900 px); C - Tablet (1024x768 px); D - Mobile (768x1024 px); E - Android (412x915 px); and F - Android Small (360x640 px).</p>
                 <p>The combination of each screen type with its resolution was meticulously designed to accommodate the elements in the interface as effectively as possible. Thus, it was possible to make the Gamezilla website completely responsive.</p>
             </div>
 
             <div class="row g-0">
-                <img src="/assets/gamezilla/Gamezilla Branding (10).png" alt="Gamezilla Slogan" class="col-12 img-fluid">       
+                <img src="/assets/gamezilla/gamezilla branding (10).png" alt="Gamezilla Slogan" class="col-12 img-fluid">       
             </div>
         </section>
     </main>
