--- a/projects/dinnie-app.html
+++ b/projects/dinnie-app.html
@@ -19,10 +19,11 @@
     <link rel="stylesheet" href="/css/tags.css">
     <link rel="stylesheet" href="/css/styles.css">
 
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Geist:wght@100..900&display=swap" rel="stylesheet">
-        </head>
+    <link rel="icon" type="image/png" href="../assets/favicon.png">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Geist:wght@100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -123,7 +124,7 @@
 
             <h3>Project final report</h3>
             <div style="aspect-ratio: 1.414; width: 100%;">
-                <iframe src="/assets/dinnie-app/dsg1004_2019-2_Dinnie_1AC-1AD_RELATORIO.pdf" width="100%" height="700" style="border: none;"></iframe>
+                <iframe src="/assets/dinnie-app/dsg1004_2019-2_dinnie_1ac-1ad_relatorio" width="100%" height="700" style="border: none;"></iframe>
             </div>
         </section>
     </main>
