--- a/projects/milejao.html
+++ b/projects/milejao.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="/css/tags.css">
     <link rel="stylesheet" href="/css/styles.css">
 
+    <link rel="icon" type="image/png" href="../assets/favicon.png">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Geist:wght@100..900&display=swap" rel="stylesheet">
@@ -82,31 +84,31 @@
 
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="/assets/milejao/BESFCMJ-3.jpg" class="d-block w-100" alt="Book Cover">
+                            <img src="/assets/milejao/besfcmj-3.jpg" class="d-block w-100" alt="Book Cover">
                         </div>
                         <div class="carousel-item">
-                            <img src="/assets/milejao/BESFCMJ-4.jpg" class="d-block w-100" alt="Book Internal Page 4">
+                            <img src="/assets/milejao/besfcmj-4.jpg" class="d-block w-100" alt="Book Internal Page 4">
                         </div>
                         <div class="carousel-item">
-                            <img src="/assets/milejao/BESFCMJ-5.jpg" class="d-block w-100" alt="Book Internal Page 5">
+                            <img src="/assets/milejao/besfcmj-5.jpg" class="d-block w-100" alt="Book Internal Page 5">
                         </div>
                         <div class="carousel-item">
-                            <img src="/assets/milejao/BESFCMJ-6.jpg" class="d-block w-100" alt="Book Internal Page 6">
+                            <img src="/assets/milejao/besfcmj-6.jpg" class="d-block w-100" alt="Book Internal Page 6">
                         </div>
                         <div class="carousel-item">
-                            <img src="/assets/milejao/BESFCMJ-8.jpg" class="d-block w-100" alt="Book Internal Page 8">
+                            <img src="/assets/milejao/besfcmj-8.jpg" class="d-block w-100" alt="Book Internal Page 8">
                         </div>
                         <div class="carousel-item">
-                            <img src="/assets/milejao/BESFCMJ-9.jpg" class="d-block w-100" alt="Book Internal Page 9">
+                            <img src="/assets/milejao/besfcmj-9.jpg" class="d-block w-100" alt="Book Internal Page 9">
                         </div>
                         <div class="carousel-item">
-                            <img src="/assets/milejao/BESFCMJ-10.jpg" class="d-block w-100" alt="Book Internal Page 10">
+                            <img src="/assets/milejao/besfcmj-10.jpg" class="d-block w-100" alt="Book Internal Page 10">
                         </div>
                         <div class="carousel-item">
-                            <img src="/assets/milejao/BESFCMJ-11.jpg" class="d-block w-100" alt="Book Internal Page 11">
+                            <img src="/assets/milejao/besfcmj-11.jpg" class="d-block w-100" alt="Book Internal Page 11">
                         </div>
                         <div class="carousel-item">
-                            <img src="/assets/milejao/BESFCMJ-12.jpg" class="d-block w-100" alt="Book Internal Page 12">
+                            <img src="/assets/milejao/besfcmj-12.jpg" class="d-block w-100" alt="Book Internal Page 12">
                         </div>
                     </div>
 
@@ -122,7 +124,7 @@
 
             <h3>Project Final Report</h3>
             <div style="aspect-ratio: 1.414; width: 100%;" class="mb-5">
-                <iframe src="/assets/milejao/Book-BESFCMJ.pdf" width="100%" height="700" style="border: none;"></iframe>
+                <iframe src="/assets/milejao/book-besfcmj.pdf" width="100%" height="700" style="border: none;"></iframe>
             </div>
         </section>
     </main>
